--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@ ${pageUrl}`.trim();
                 
                 try {
                                       
-                    const smsApiUrl = 'https://rest.payamak-panel.com/api/SendSMS/SendSMS1';
+                    const smsApiUrl = 'http://api.payamak-panel.com/post/Send.asmx/SendSimpleSMS';
                     const smsUsername = '9122136866'; // !!! REPLACE !!!
                     const smsPassword = 'c403a185-ce2b-4a1c-a0ca-673377f52091'; // !!! REPLACE !!!
                     const smsSenderNumber = '5000127008044'; // !!! REPLACE !!!
