--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,8 @@ ${pageUrl}`.trim();
                 
                 try {
                                       
-                   const workerUrl = 'https://fanoos.me/api/send-sms/'; // Or the full URL: 'https://fanoos.me/api/send-sms/'
+                   //const workerUrl = 'https://fanoos.me/api/send-sms/'; // Or the full URL: 'https://fanoos.me/api/send-sms/'
+                   const workerUrl = 'https://payamakotp.grifline.workers.dev'; // Or the full URL: 'https://fanoos.me/api/send-sms/'
 
                         const smsText = `کد تایید شما برای رزرو سالن: ${tempGeneratedOtp}`;
 
